--- a/Gnome.Web/Views/Home/Index.cshtml
+++ b/Gnome.Web/Views/Home/Index.cshtml
@@ -2,8 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<app asp-prerender-module="ClientApp/dist/main-server">Loading...</app>
+@*<app asp-prerender-module="ClientApp/dist/main-server">Loading...</app>*@
+<app>Loading...</app>
 
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.min.js"></script>
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
 @section scripts {
     <script src="~/dist/main-client.js" asp-append-version="true"></script>
