--- a/Gnome.Web/ClientApp/app/components/login/login.component.html
+++ b/Gnome.Web/ClientApp/app/components/login/login.component.html
@@ -1,1 +1,29 @@
-﻿<h1>Login</h1>
+﻿<div>
+    <h1>Login</h1>
+    <form>
+        <div class="form-group">
+            <label for="login-email">Email address</label>
+            <input type="email" class="form-control" id="login-email" name="login-email" placeholder="Enter email" [(ngModel)]="LoginCredentials.Email">
+        </div>
+        <div class="form-group">
+            <label for="login-password">Password</label>
+            <input type="password" class="form-control" id="login-password" name="login-password" placeholder="Password" [(ngModel)]="LoginCredentials.Password">
+        </div>
+        <button type="submit" class="btn btn-primary" (click)="Login(LoginCredentials)">Log-in</button>
+    </form>
+</div>
+
+<div>
+    <h1>Registration</h1>
+    <form>
+        <div class="form-group">
+            <label for="registration-email">Email address</label>
+            <input type="email" class="form-control" id="registration-email" name="registration-email" placeholder="Enter email" [(ngModel)]="RegisterCredentials.Email ">
+        </div>
+        <div class="form-group">
+            <label for="registration-password">Password</label>
+            <input type="password" class="form-control" id="registration-password" name="registration-password" placeholder="Password" [(ngModel)]="RegisterCredentials.Password">
+        </div>
+        <button type="submit" class="btn btn-primary" (click)="Register(RegisterCredentials)">Register</button>
+    </form>
+</div>
