added auth service, improved layout

--- a/Gnome.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Gnome.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -14,17 +14,22 @@
             <ul class='nav navbar-nav'>
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/home']">
-                        <span class='glyphicon glyphicon-home'></span> Home
+                        <span class='glyphicon glyphicon-home'></span> Dashboard
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
+                        <span class='glyphicon glyphicon-credit-card'></span> Accounts
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/fetch-data']">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                        <span class='glyphicon glyphicon-transfer'></span> Transactions
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/report']">
+                        <span class='glyphicon glyphicon-signal'></span> Reports
                     </a>
                 </li>
             </ul>
