--- a/Gnome.Web/ClientApp/app/components/home/home.component.html
+++ b/Gnome.Web/ClientApp/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="IsAuthenticated">
+<div *ngIf="auth.isAuthenticated()">
     <h1>Hello, world!</h1>
     <p>Welcome to your new single-page application, built with:</p>
     <ul>
@@ -16,6 +16,6 @@
         <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and the <code>webpack</code> build tool produces minified static CSS and JavaScript files.</li>
     </ul>
 </div>
-<div *ngIf="!IsAuthenticated">
+<div *ngIf="!auth.isAuthenticated()">
     <login></login>
 </div>
